--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -12,7 +12,7 @@
 
     <!--<Page.BottomAppBar>
         <CommandBar Background="LightPink">
-            <AppBarButton Icon="Setting" Label="设置" Click="settings_Click"/>
+            <AppBarButton Icon="Setting" Label="设置" Tapped="settings_Tapped"/>
         </CommandBar>
     </Page.BottomAppBar>-->
 
@@ -42,45 +42,47 @@
             <Image Source="/Assets/Images/HomePageHeader.png" Stretch="Uniform" Grid.ColumnSpan="5"/>
 
             <!--tiles-->
-            <sharedControl:ContentButton Grid.Row="2" Grid.Column="1" Click="singlePhoto_Click">
+            <sharedControl:ContentButton Grid.Row="2" Grid.Column="1" Tapped="singlePhoto_Tapped">
                 <Image Source="/Assets/Images/HomePageSinglePhoto.png" Stretch="Uniform"/>
             </sharedControl:ContentButton>
-            <sharedControl:ContentButton Grid.Row="2" Grid.Column="3" Click="multiPhoto_Click">
+            <sharedControl:ContentButton Grid.Row="2" Grid.Column="3" Tapped="multiPhoto_Tapped">
                 <Image Source="/Assets/Images/HomePageMultiPhoto.png" Stretch="Uniform" />
             </sharedControl:ContentButton>
-            <sharedControl:ContentButton Grid.Row="4" Grid.Column="1" Click="boutique_Click" >
+            <sharedControl:ContentButton Grid.Row="4" Grid.Column="1" Tapped="boutique_Tapped" >
                 <Image Source="/Assets/Images/HomePageMultiPhoto.png" Stretch="Uniform" />
             </sharedControl:ContentButton>
-            <sharedControl:ContentButton Grid.Row="4" Grid.Column="3" Click="boutique_Click">
+            <sharedControl:ContentButton Grid.Row="4" Grid.Column="3" Tapped="boutique_Tapped">
                 <Image Source="/Assets/Images/HomePageMultiPhoto.png" Stretch="Uniform" />
             </sharedControl:ContentButton>
 
             <!--bottom buttons-->
-            <sharedControl:ContentButton Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch" Click="dailyAD_Click">
-                <Grid Background="#ffffafb4">
+            <sharedControl:ContentButton Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch" Tapped="dailyAD_Tapped">
+                <Grid>
+                    <Image Source="/Assets/Images/HomePageSettingsButtonBase.png" Stretch="Uniform"/>
                     <Grid HorizontalAlignment="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <Image Grid.Column="0" Source="/Assets/Images/HomePageDailyAD.png" Stretch="Uniform" Width="24" Height="24" Margin="0,0,4,0"/>
+                        <Image Grid.Column="0" Source="/Assets/Images/HomePageDailyAD.png" Stretch="Uniform" Width="20" Height="20" Margin="0,0,4,0"/>
                         <TextBlock Grid.Column="1" Text="每日推荐" Foreground="#ffffffff" FontSize="20" VerticalAlignment="Center" Style="{StaticResource TextBlockBase}"/>
                     </Grid>
                 </Grid>
             </sharedControl:ContentButton>
-            <sharedControl:ContentButton Grid.Row="6" Grid.Column="3" HorizontalAlignment="Stretch" Click="settings_Click">
+            <sharedControl:ContentButton Grid.Row="6" Grid.Column="3" HorizontalAlignment="Stretch" Tapped="settings_Tapped">
                 <Grid Background="#ffffafb4">
+                    <Image Source="/Assets/Images/HomePageSettingsButtonBase.png" Stretch="Uniform"/>
                     <Grid HorizontalAlignment="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <Image Grid.Column="0" Source="/Assets/Images/HomePageSettings.png" Stretch="Uniform" Width="24" Height="24" Margin="0,0,4,0"/>
+                        <Image Grid.Column="0" Source="/Assets/Images/HomePageSettings.png" Stretch="Uniform" Width="20" Height="20" Margin="0,0,4,0"/>
                         <TextBlock Grid.Column="1" Text="设置" Foreground="#ffffffff" FontSize="20" VerticalAlignment="Center" Style="{StaticResource TextBlockBase}"/>
                     </Grid>
                 </Grid>
             </sharedControl:ContentButton>
-            
+
         </Grid>
 
         <StackPanel Background="White" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.ColumnSpan="100" Grid.RowSpan="100">
