--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
@@ -19,7 +19,7 @@
 
     <!--textblock base-->
     <Style x:Key="TextBlockBase" TargetType="TextBlock">
-        <!--<Setter Property="FontFamily" Value="Rosewood Std Regular"/>-->
+        <!--<Setter Property="FontFamily" Value="Microsoft YaHei"/>-->
     </Style>
 
     <!--common-->
@@ -43,16 +43,15 @@
     </Style>
 
     <Style x:Key="PageTitlePanel_Style" TargetType="Grid">
-        <Setter Property="Height" Value="48"/>
-        <Setter Property="Background" Value="#FFFF9A9A"/>
+        <Setter Property="Height" Value="60"/>
     </Style>
 
     <Style x:Key="PageTitle_Style" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
-        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="FontSize" Value="26"/>
         <Setter Property="FontWeight" Value="Normal"/>
-        <Setter Property="Foreground" Value="#ffffffff"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="12,0,0,0"/>
+        <Setter Property="Foreground" Value="#ffff7e7e"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Margin" Value="0,0,0,0"/>
     </Style>
 
     <!--content button-->
@@ -430,8 +429,8 @@
     </Style>
 
     <Style x:Key="Settings_ItemText_Style" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
-        <Setter Property="FontSize" Value="24"/>
-        <Setter Property="Foreground" Value="#ff2d2d2d"/>
+        <Setter Property="FontSize" Value="26"/>
+        <Setter Property="Foreground" Value="#ff2b2b2b"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="0,0,0,0"/>
     </Style>
