--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
@@ -10,12 +10,15 @@
     <sharedConverter:AnythingToVisibilityConverter x:Key="AnythingToVisibilityConverter"/>
 
     <!--screen-->
+    <x:Double x:Key="ScaleFactor">1</x:Double>
     <x:Double x:Key="ScreenWidth">0</x:Double>
     <x:Double x:Key="ScreenHeight">0</x:Double>
     <x:Double x:Key="ScreenWidthHalf">200</x:Double>
     <x:Double x:Key="MaterialHeight">100</x:Double>
     <x:Double x:Key="KeyboardHeight">336</x:Double>
     <x:Double x:Key="KeyboardHeightWithAppBar">336</x:Double>
+
+    <x:Double x:Key="FontSize26">26</x:Double>
 
     <!--textblock base-->
     <Style x:Key="TextBlockBase" TargetType="TextBlock">
@@ -428,12 +431,7 @@
         <Setter Property="Margin" Value="12,0,12,0"/>
     </Style>
 
-    <Style x:Key="Settings_ItemText_Style" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
-        <Setter Property="FontSize" Value="26"/>
-        <Setter Property="Foreground" Value="#ff2b2b2b"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="0,0,0,0"/>
-    </Style>
+    
 
     <!--photo edit page-->
     <Style x:Key="PhotoEditPage_PopMenuContainer_Style" TargetType="Border">
