--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
@@ -18,7 +18,14 @@
     <x:Double x:Key="KeyboardHeight">336</x:Double>
     <x:Double x:Key="KeyboardHeightWithAppBar">336</x:Double>
 
+    <!--font size-->
     <x:Double x:Key="FontSize26">26</x:Double>
+    <Style x:Key="FontSizeTest" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
+        <Setter Property="FontSize" Value="{StaticResource FontSize26}"/>
+        <Setter Property="Foreground" Value="#ff2b2b2b"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0,0,0,0"/>
+    </Style>
 
     <!--textblock base-->
     <Style x:Key="TextBlockBase" TargetType="TextBlock">
@@ -431,7 +438,12 @@
         <Setter Property="Margin" Value="12,0,12,0"/>
     </Style>
 
-    
+    <Style x:Key="Settings_ItemText_Style" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
+        <Setter Property="FontSize" Value="26"/>
+        <Setter Property="Foreground" Value="#ff2b2b2b"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0,0,0,0"/>
+    </Style>
 
     <!--photo edit page-->
     <Style x:Key="PhotoEditPage_PopMenuContainer_Style" TargetType="Border">
